# Jrinx-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  requirements.txt  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: test.yml
abi/: Cargo.toml  README.md
abi/src/: lib.rs  sysno.rs
abi/src/sysfn/: macros.rs  mod.rs
apex/: Cargo.toml  README.md
apex/src/: basic.rs  bindings.rs  lib.rs  partition.rs  process.rs  time.rs
kern/: Cargo.toml  Makefile  build.rs
kern/modules/a653/: Cargo.toml
kern/modules/a653/src/: helper.rs  lib.rs  partition.rs  process.rs
kern/modules/addr/: Cargo.toml
kern/modules/addr-macro/: Cargo.toml
kern/modules/addr-macro/src/: lib.rs
kern/modules/addr/src/: lib.rs
kern/modules/config/: Cargo.toml
kern/modules/config/src/: lib.rs
kern/modules/config/src/arch/: mod.rs  riscv.rs
kern/modules/devprober/: Cargo.toml
kern/modules/devprober-macro/: Cargo.toml
kern/modules/devprober-macro/src/: lib.rs
kern/modules/devprober/src/: lib.rs
kern/modules/driver/: Cargo.toml
kern/modules/driver/src/: lib.rs  mem.rs
kern/modules/driver/src/serial/: ns16550a.rs
kern/modules/error/: Cargo.toml
kern/modules/error/src/: lib.rs
kern/modules/hal/: Cargo.toml
kern/modules/hal/src/: lib.rs
kern/modules/hal/src/arch/riscv/: cache.rs  cpu.rs  earlycon.rs  interrupt.rs  mod.rs  vm.rs
kern/modules/heap/: Cargo.toml
kern/modules/heap/src/: lib.rs
kern/modules/intercpu-event/: Cargo.toml
kern/modules/intercpu-event/src/: lib.rs
kern/modules/layout/: Cargo.toml
kern/modules/layout/src/: lib.rs
kern/modules/linear-alloc/: Cargo.toml
kern/modules/linear-alloc/src/: lib.rs
kern/modules/loader/: Cargo.toml
kern/modules/loader/src/: lib.rs
kern/modules/logging/: Cargo.toml
kern/modules/logging/src/: lib.rs
kern/modules/multitask/: Cargo.toml
kern/modules/multitask/src/: executor.rs  inspector.rs  lib.rs  runtime.rs
kern/modules/multitask/src/arch/: mod.rs
kern/modules/multitask/src/arch/riscv/: mod.rs
kern/modules/paging/: Cargo.toml
kern/modules/paging/src/: common.rs  lib.rs
kern/modules/paging/src/arch/riscv/: boot.rs  mod.rs
kern/modules/percpu/: Cargo.toml
kern/modules/percpu-macro/: Cargo.toml
kern/modules/percpu-macro/src/: lib.rs
kern/modules/percpu/src/: lib.rs
kern/modules/percpu/src/arch/: mod.rs
kern/modules/percpu/src/arch/riscv/: mod.rs
kern/modules/phys-frame/: Cargo.toml
kern/modules/phys-frame/src/: lib.rs
kern/modules/serial-id/: Cargo.toml
kern/modules/serial-id-macro/: Cargo.toml
kern/modules/serial-id-macro/src/: lib.rs
kern/modules/serial-id/src/: lib.rs
kern/modules/stack-alloc/: Cargo.toml
kern/modules/stack-alloc/src/: lib.rs
kern/modules/syscall/: Cargo.toml
kern/modules/syscall/src/: all.rs  lib.rs  partition.rs  process.rs
kern/modules/testdef/: Cargo.toml
kern/modules/testdef-macro/: Cargo.toml
kern/modules/testdef-macro/src/: lib.rs
kern/modules/testdef/src/: lib.rs
kern/modules/timed-event/: Cargo.toml
kern/modules/timed-event/src/: lib.rs
kern/modules/trap/: Cargo.toml
kern/modules/trap/src/: breakpoint.rs  lib.rs  soft_int.rs  timer_int.rs
kern/modules/trap/src/arch/riscv/: mod.rs
kern/modules/uprog/: Cargo.toml
kern/modules/uprog/src/: lib.rs
kern/modules/util/: Cargo.toml
kern/modules/util/src/: color.rs  fastpq.rs  interval.rs  lib.rs  mtxgroup.rs
kern/modules/vmm/: Cargo.toml
kern/modules/vmm/src/: lib.rs
kern/src/: bootargs.rs  conf.rs  cpudata.rs  error.rs  heap.rs  main.rs  panic.rs  vmm.rs
kern/src/arch/: mod.rs
kern/src/arch/riscv/: cpu.rs  cpus.rs  layout.rs  mod.rs
kern/src/arch/riscv/board/: virt.rs
kern/src/arch/riscv/boot/: mod.rs  paging.rs
kern/src/arch/riscv/mm/: mod.rs  virt.rs
kern/src/arch/riscv/riscv32/: layout.rs
kern/src/arch/riscv/riscv64/: layout.rs  mod.rs
kern/src/arch/riscv/riscv64/mm/: mod.rs
kern/src/arch/riscv/task/: entry.rs  executor.rs  mod.rs  switch.rs
kern/src/arch/riscv/trap/: entry.rs  mod.rs  trap.rs
kern/src/arch/riscv/util/: mod.rs
kern/src/driver/: bootargs.rs  mod.rs  random.rs
kern/src/driver/serial/: mod.rs  ns16550a.rs
kern/src/mm/: mod.rs  phys.rs  virt.rs
kern/src/task/: executor.rs  mod.rs  runtime.rs  sched.rs
kern/src/task/runtime/: inspector.rs  mod.rs
kern/src/test/: heap.rs  mod.rs  stack.rs
kern/src/test/mm/: mod.rs
kern/src/test/task/: mod.rs  runtime.rs
kern/src/test/time/: mod.rs
kern/src/test/trap/: mod.rs
kern/src/time/: mod.rs
kern/src/trap/: breakpoint.rs  interrupt.rs  mod.rs  timer_int.rs
kern/src/util/: color.rs  identity.rs  logging.rs  mod.rs  once_lock.rs  panic.rs  priority.rs  random.rs  serial_id.rs  stack.rs
kern/tgt/: .gitignore  linker.ld  linker.ldS  riscv-board.list  riscv.ld  riscv.ldS  riscv32.json  riscv64.json  riscv64.ld
mk/: setup-envs.mk
scripts/: lint-all  test-expand  test-run
scripts/python/: judge.py  test_expand.py  test_run.py  util.py
tests/include/: kern.yml
tests/kern/trap/: syscall.yml
user/: Cargo.toml
user/programs/idle/: Cargo.toml
user/programs/idle/src/: main.rs
user/programs/test/kern/nullptr-reader/: Cargo.toml
user/programs/test/kern/nullptr-writer/src/: main.rs
user/programs/test/kern/system-caller/src/: main.rs
user/programs/test/nullptr-reader/src/: main.rs
user/programs/test/nullptr-writer/: Cargo.toml
user/programs/test/system-caller/: Cargo.toml
user/programs/test/user/process-creator/: Cargo.toml
user/programs/test/user/process-creator/src/: main.rs
xtask/: Cargo.toml
xtask/src/: ar.rs  arch.rs  envs.rs  error.rs  lint.rs  main.rs  make.rs  qemu.rs  ulint.rs  uprog.rs
xtask/src/make/: lint.rs
xtask/src/util/: arch.rs  cargo.rs  mod.rs  qemu.rs
