[package]
name = "jrinx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
no_test = []
colorful = []

[dependencies]
cfg-if = "1.0.0"
fdt = "0.1.5"
getargs = { version = "0.5.0", default-features = false }
jrinx-addr = { version = "0.1.0", path = "modules/addr" }
jrinx-addr-macro = { version = "0.1.0", path = "modules/addr-macro" }
jrinx-config = { version = "0.1.0", path = "modules/config" }
jrinx-driver = { version = "0.1.0", path = "modules/driver" }
jrinx-error = { version = "0.1.0", path = "modules/error" }
jrinx-hal = { version = "0.1.0", path = "modules/hal" }
jrinx-heap = { version = "0.1.0", path = "modules/heap" }
jrinx-layout = { version = "0.1.0", path = "modules/layout" }
jrinx-linear-alloc = { version = "0.1.0", path = "modules/linear-alloc" }
jrinx-paging = { version = "0.1.0", path = "modules/paging" }
jrinx-phys-frame = { version = "0.1.0", path = "modules/phys-frame" }
jrinx-serial-id-macro = { version = "0.1.0", path = "modules/serial-id-macro" }
jrinx-testdef = { version = "0.1.0", path = "modules/testdef" }
jrinx-testdef-macro = { version = "0.1.0", path = "modules/testdef-macro" }
jrinx-util = { version = "0.1.0", path = "modules/util" }
log = { version = "0.4.20", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
spin = "0.9.8"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
sbi = "0.2.0"
