[package]
name = "jrinx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["colorful"]
no_test = []
colorful = ["jrinx-logging/colorful"]

[dependencies]
cfg-if = "1.0.0"
elf = { version = "0.7.3", default-features = false }
fdt = "0.1.5"
getargs = { version = "0.5.0", default-features = false }
jrinx-a653 = { path = "modules/a653" }
jrinx-addr = { path = "modules/addr" }
jrinx-apex = { path = "../apex" }
jrinx-config = { path = "modules/config" }
jrinx-driver = { path = "modules/driver" }
jrinx-error = { path = "modules/error" }
jrinx-hal = { path = "modules/hal" }
jrinx-heap = { path = "modules/heap" }
jrinx-layout = { path = "modules/layout" }
jrinx-loader = { path = "modules/loader" }
jrinx-logging = { path = "modules/logging" }
jrinx-multitask = { path = "modules/multitask" }
jrinx-paging = { path = "modules/paging" }
jrinx-percpu = { path = "modules/percpu" }
jrinx-phys-frame = { path = "modules/phys-frame" }
jrinx-stack-alloc = { path = "modules/stack-alloc" }
jrinx-syscall = { path = "modules/syscall" }
jrinx-testdef = { path = "modules/testdef" }
jrinx-timed-event = { path = "modules/timed-event" }
jrinx-trap = { path = "modules/trap" }
jrinx-uprog = { path = "modules/uprog" }
jrinx-util = { path = "modules/util" }
jrinx-vmm = { path = "modules/vmm" }
log = { version = "0.4.20", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
spin = "0.9.8"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
sbi = "0.2.0"
