[package]
name = "jrinx-a653"
version = "0.1.0"
edition = "2021"

[dependencies]
a653rs = { version = "0.4.1", features = ["bindings"] }
elf = { version = "0.7.4", default-features = false }
jrinx-addr = { version = "0.1.0", path = "../addr" }
jrinx-config = { version = "0.1.0", path = "../config" }
jrinx-error = { version = "0.1.0", path = "../error" }
jrinx-hal = { version = "0.1.0", path = "../hal" }
jrinx-loader = { version = "0.1.0", path = "../loader" }
jrinx-multitask = { version = "0.1.0", path = "../multitask" }
jrinx-paging = { version = "0.1.0", path = "../paging" }
jrinx-phys-frame = { version = "0.1.0", path = "../phys-frame" }
jrinx-serial-id-macro = { version = "0.1.0", path = "../serial-id-macro" }
jrinx-stack-alloc = { version = "0.1.0", path = "../stack-alloc" }
jrinx-trap = { version = "0.1.0", path = "../trap" }
jrinx-vmm = { version = "0.1.0", path = "../vmm" }
log = { version = "0.4.20", default-features = false }
spin = "0.9.8"
