[package]
name = "jrinx-a653"
version = "0.1.0"
edition = "2021"

[dependencies]
elf = { version = "0.7.4", default-features = false }
jrinx-addr = { path = "../addr" }
jrinx-apex = { path = "../../../apex" }
jrinx-config = { path = "../config" }
jrinx-error = { path = "../error" }
jrinx-hal = { path = "../hal" }
jrinx-loader = { path = "../loader" }
jrinx-multitask = { path = "../multitask" }
jrinx-paging = { path = "../paging" }
jrinx-phys-frame = { path = "../phys-frame" }
jrinx-serial-id-macro = { path = "../serial-id-macro" }
jrinx-stack-alloc = { path = "../stack-alloc" }
jrinx-trap = { path = "../trap" }
jrinx-vmm = { path = "../vmm" }
log = { version = "0.4.21", default-features = false }
spin = "0.9.8"
