[package]
name = "jrinx-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
fdt = "0.1.5"
jrinx-addr = { path = "../addr" }
jrinx-config = { path = "../config" }
jrinx-devprober = { path = "../devprober" }
jrinx-error = { path = "../error" }
jrinx-heap = { path = "../heap" }
jrinx-layout = { path = "../layout" }
jrinx-util = { path = "../util" }
log = { version = "0.4.21", default-features = false }
