[package]
name = "jrinx-logging"
version = "0.1.0"
edition = "2021"

[features]
colorful = []

[dependencies]
jrinx-error = { path = "../error" }
jrinx-hal = { path = "../hal" }
jrinx-multitask = { path = "../multitask" }
jrinx-util = { path = "../util" }
log = { version = "0.4.20", default-features = false }
spin = "0.9.8"
