[package]
name = "jrinx-multitask"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
const-default = { version = "1.0.0", features = ["derive"], default-features = false }
jrinx-addr = { path = "../addr" }
jrinx-config = { path = "../config" }
jrinx-error = { path = "../error" }
jrinx-hal = { path = "../hal" }
jrinx-layout = { path = "../layout" }
jrinx-paging = { path = "../paging" }
jrinx-percpu = { path = "../percpu" }
jrinx-phys-frame = { path = "../phys-frame" }
jrinx-serial-id-macro = { path = "../serial-id-macro" }
jrinx-stack-alloc = { path = "../stack-alloc" }
jrinx-timed-event = { path = "../timed-event" }
jrinx-util = { path = "../util" }
jrinx-vmm = { path = "../vmm" }
log = { version = "0.4.20", default-features = false }
mtxgroup = { version = "0.1.1", default-features = false, features = ["spin"] }
spin = "0.9.8"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
