[package]
name = "jrinx-syscall"
version = "0.1.0"
edition = "2021"

[dependencies]
jrinx-a653 = { path = "../a653" }
jrinx-abi = { path = "../../../abi" }
jrinx-apex = { path = "../../../apex" }
jrinx-error = { path = "../error" }
jrinx-hal = { path = "../hal" }
jrinx-multitask = { path = "../multitask" }
jrinx-trap = { path = "../trap" }
log = { version = "0.4.20", default-features = false }
