[package]
name = "jrinx-timed-event"
version = "0.1.0"
edition = "2021"

[dependencies]
jrinx-error = { path = "../error" }
jrinx-hal = { path = "../hal" }
jrinx-layout = { path = "../layout" }
jrinx-percpu = { path = "../percpu" }
jrinx-serial-id-macro = { path = "../serial-id-macro" }
spin = "0.9.8"
