[package]
name = "process-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
jrinx-abi = { path = "../../../../../abi", features = ["sysfn"] }
jrlib-a653 = { path = "../../../../library/a653" }
jrlib-logging = { path = "../../../../library/logging" }
log = { version = "0.4.20", default-features = false }
